--- a/www/42Porto/redir.html
+++ b/www/42Porto/redir.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Welcome</title>
+	<title>Redirecionamento</title>
 	<link rel="stylesheet" href="styleswb.css">
 </head>
 <body>
@@ -19,8 +19,8 @@
 	</nav>
 </header>
 <main>
-	<h1>Bem-vindo à Página Inicial</h1>
-	<p>Esta é a página principal do site.</p>
+	<h1>Redirecionamento</h1>
+	<p>Página de redirecionamento.</p>
 </main>
 </body>
 </html>
